<resources>
    <string name="app_name">Catch!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_task">Add Task</string>
    <string name="task_hint">Enter a task to be completed</string>
    <string name="task">Task</string>
    <string name="balloon_description">Image representing an individual task</string>
    <string name="save">Save</string>
    <string name="add_category">Add Category</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="add_category_hint">Input Your Category</string>
    <string name="ok">OK</string>
    <string name="title_activity_pick_category_dialog">PickCategoryDialog</string>
    <string name="select_category">Select Category</string>
    <string name="check_description">Validation Checkbox</string>
    <string name="priority_title">Priority</string>
    <string name="default_priority">0</string>
    <string name="task_manager">Task Manager</string>
    <string name="no_task_in_category">No Task in this Category!</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="no_categories">You don\'t have any categories yet!</string>
    <string name="balloon_content_description">An Image containing a Balloon as a border for text</string>
    <string name="empty_view">Empty Category View</string>
    <string name="popped_balloon_description">This is the image that pops up when a balloon sinks below the screen</string>
    <string name="save_fab">Save Task Button</string>
    <string name="delete_fab">Delete Button</string>
    <string name="add_task_fab">Add Task Button</string>
</resources>
