<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.catchapp.nikitagamolsky.capstone_project_catch.PickCategoryDialog">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/categoryList"
        android:focusable="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addCategoryText"
        android:textAppearance="?textAppearanceListItem"
        android:text="@string/add_category"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginLeft="@dimen/text_margin" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_category_hint"
        android:id="@+id/categoryEdit"
        android:textSize="16sp"
        android:inputType="text"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:imeOptions="actionSend"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/dialog_buttons">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancelButton"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/okButton"
        android:onClick="addCategories"/>
</LinearLayout>

</LinearLayout>
