<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.catchapp.nikitagamolsky.capstone_project_catch.TaskManagerActivity"
    tools:showIn="@layout/app_bar_task_manager"
    xmlns:ads="http://schemas.android.com/apk/res-auto">


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:visibility="gone">
    </com.google.android.gms.ads.AdView>

    <android.support.v7.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/taskList"
        android:scrollbars="horizontal"
        />


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emptyView"
        android:visibility="gone"
        android:layout_gravity="center">

        <ImageView
            android:contentDescription="@string/empty_view"
            android:layout_width="300dp"
            android:layout_height="360dp"
            android:scaleType="center"
            android:src="@drawable/ic_nikita_balloon_shortstring_45dp"
            android:paddingTop="100dp"
            android:scaleY="1.5"
            android:scaleX="1.5"
            />

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/taskText"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:paddingBottom="75dp"
            android:text="@string/no_categories"
            />

    </FrameLayout>

</LinearLayout>
