<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.catchapp.nikitagamolsky.capstone_project_catch.InputTaskActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputTask"
        android:hint="@string/task_hint"
        android:inputType="text"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/task"
        android:id="@+id/task_title"
        android:layout_alignStart="@+id/inputTask"
        android:layout_alignLeft="@+id/inputTask"
        android:layout_marginTop="40dp"
        android:textIsSelectable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/categorySelect"
        android:text="Select Category"
        android:layout_marginTop="40dp"
        android:layout_alignStart="@+id/inputTask"
        android:layout_alignLeft="@+id/inputTask"
        android:layout_below="@+id/inputTask"
        android:onClick="selectCategory"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_below="@+id/categorySelect"
        android:layout_alignLeft="@+id/categorySelect"
        android:layout_alignStart="@+id/categorySelect"
        android:layout_marginTop="58dp"
        android:layout_alignRight="@+id/categorySelect"
        android:layout_alignEnd="@+id/categorySelect" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:layout_below="@+id/seekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:onClick="saveTask"/>



</RelativeLayout>
