<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:id="@+id/snackbarPosition"
    xmlns:android="http://schemas.android.com/apk/res/android">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="70dp"
    android:focusableInTouchMode="true"
    tools:context="com.catchapp.nikitagamolsky.capstone_project_catch.InputTaskActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/titleInput">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/taskLabel"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputTask"
                android:hint="@string/task"
                android:inputType="textCapWords"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginTop="60dp"
                android:imeOptions="actionSend"/>



        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleCheck"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_done_24dp"
            android:adjustViewBounds="true"
            android:scaleX="1.8"
            android:scaleY="1.8"
            android:layout_margin="20dp"
            android:layout_marginBottom="20dp"
            android:tint="@color/colorAccent"
            android:visibility="gone"
            android:contentDescription="@string/check_description" />
    </FrameLayout>



    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/categoryList"
        android:layout_below="@+id/titleInput"
        android:orientation="horizontal"
        />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskLabel2"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/categoryList"
        >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/editCategory"
        android:visibility="gone"
        android:inputType="textCapWords"
        android:hint="@string/add_category_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?android:textColorHint"
        android:imeOptions="actionSend"
       />

</android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarTitle"
        android:text="@string/priority_title"
        android:layout_below="@+id/taskLabel2"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="?android:textColorHint"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/seekBarTitle">
    <SeekBar
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/priorityBar"
        android:max="10"
        android:progress="0"

        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priorityView"
            />

    </LinearLayout>



</RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>